# diffusion-speech-recognition

./: .env.example  .gitignore  README.md  evaluation_results.json  main.py  pyproject.toml  requirements.txt  run_benchmark.sh  test.ipynb
.agents/rules/: uv-env.md
configs/: my_amr_parsing_config.json  my_amr_parsing_config_roberta.json  my_vi2en_config.json  speech_recognition_config.json  test_vi_en_push_checkpoint.json  test_vi_multitask_config.json  test_vi_multitask_precomputed_config.json  vi_en_deep_fusion.json  vi_multitask_config.json  vi_multitask_precomputed_config.json
onnx/: benchmark_results.json
scripts/: bootstrap_and_train.sh  convert_npy_to_parquet.py  download_precomputed_data.py  precompute_embeddings.py  push_to_hub.py  run.sh  upload_precomputed_data_robust.py
scripts/data-preprocess/: README.md  convert_npy_to_parquet.py  download_precomputed_data.py  extract_validation.py  precompute_embeddings.py  upload_precomputed_data_robust.py
scripts/model-manager/: README.md  app.py  eval_val.py  export_onnx.py  hardware_profile_report.json  hardware_profile_report.md  inference.py  load_checkpoint.py  load_model.py  profile_hardware.py  push_checkpoint.py  push_model.py  push_onnx_to_hub.py
scripts/qualcomm-job/: README.md  decompose_sign.py  fix_bool_ops.py  fix_gathernd_rank.py  note.md  repackage_models.py  run_all_patches.py  submit_qualcomm_job.py  test_full_inference.py  test_gathernd_patch.py  test_inference_multi_chipset.py  test_local_inference.py  utils.py
scripts/training/: amr_parsing_train.sh  pre_compute.sh  run_pipeline_end2end.sh  speech_recognition_train.sh  test_vi_multitask_train.sh  vi2en_train.sh  vi_multitask_train.sh
src/: dd_generator.py  demo.py  evaluate.py  interactive.py  requirements.txt  train.py  utils.py
src/data/: base.py  bilingual.py  collator.py  dd_data.py  memory_map.py  multitask.py  precomputed_multitask.py  (+4 more)
test/: test_deep_fusion.py  test_hf_push_callback.py  test_metric_aggregation.py
(+22 files in other folders)
