[project]
name = "diffusion-speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "deepspeed>=0.19.1",
    "fire>=0.7.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "peft>=0.19.1",
    "py-rouge>=1.1",
    "nvidia-ml-py",
    "python-dotenv>=1.2.2",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "tqdm>=4.68.2",
    "wandb>=0.27.2",
    "miniaudio>=1.71",
]
