[project]
name = "diffusion-speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "deepspeed>=0.19.1",
    "numpy>=2.4.6",
    "peft>=0.19.1",
    "py-rouge>=1.1",
    "python-dotenv>=1.2.2",
    "sacrebleu>=2.6.0",
    "tqdm>=4.68.2",
    "wandb>=0.27.2",
    "miniaudio>=1.71",
    "jiwer>=4.0.0",
    "soundfile>=0.14.0",
    "librosa>=0.11.0",
    "gradio>=6.19.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "huggingface-hub>=1.19.0",
    "safetensors>=0.8.0",
    "pydub>=0.25.1",
    "onnxruntime>=1.27.0",
    "torchaudio>=2.11.0",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
    "qai-hub>=0.51.0",
    "onnx>=1.22.0",
    "streamlit>=1.58.0",
    "ipdb>=0.13.13",
    "pyarrow>=24.0.0",
    "nltk>=3.10.0",
    "accelerate>=1.14.0",
    "fire>=0.7.1",
    "nvidia-ml-py>=13.610.43",
    "sentencepiece>=0.2.2",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]

[tool.deptry]
known_first_party = ["data", "model", "utils", "dd_generator", "trainer", "configuration_dlm", "interactive"]
per_rule_ignores = { DEP002 = "wandb" }

[tool.deptry.package_module_name_map]
python-dotenv = "dotenv"
py-rouge = "rouge"

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
"src/train.py" = ["E402"]



